crates/pgls_pretty_print/tests/snapshots/multi/tests__spgist_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/spgist_100.sql
snapshot_kind: text
---
CREATE TABLE spgist_point_tbl (id INT, p point);

CREATE INDEX "spgist_point_idx"
ON spgist_point_tbl
USING spgist
(
  p
)
WITH (fillfactor = 75);

INSERT INTO spgist_point_tbl (id, p)
SELECT
  g,
  point(g * 10, g * 10)
FROM
  generate_series(1, 10) AS g;

DELETE FROM spgist_point_tbl WHERE id < 5;

VACUUM spgist_point_tbl;

INSERT INTO spgist_point_tbl (id, p)
SELECT
  g,
  point(g * 10, g * 10)
FROM
  generate_series(1, 10000) AS g;

INSERT INTO spgist_point_tbl (id, p)
SELECT
  g + 100000,
  point(g * 10 + 1, g * 10 + 1)
FROM
  generate_series(1, 10000) AS g;

DELETE FROM spgist_point_tbl WHERE id % 2 = 1;

DELETE FROM spgist_point_tbl WHERE id < 10000;

VACUUM spgist_point_tbl;

CREATE TABLE spgist_box_tbl (id serial, b box);

INSERT INTO spgist_box_tbl (b)
SELECT
  box(point(i, j), point(i + s, j + s))
FROM
  generate_series(1, 100, 5) AS i,
  generate_series(1, 100, 5) AS j,
  generate_series(1, 10) AS s;

CREATE INDEX "spgist_box_idx"
ON spgist_box_tbl
USING spgist
(
  b
);

SELECT
  COUNT(*)
FROM
  (VALUES
    (point(5, 5)),
    (point(8, 8)),
    (point(12, 12))) AS v (p)
WHERE
  EXISTS (SELECT
    *
  FROM
    spgist_box_tbl AS b
  WHERE
    b.b && box(v.p, v.p));

CREATE TABLE spgist_text_tbl (id INT, t TEXT);

CREATE INDEX "spgist_text_idx"
ON spgist_text_tbl
USING spgist
(
  t
);

INSERT INTO spgist_text_tbl (id, t)
SELECT
  g,
  'f' || repeat('o', 100) || g
FROM
  generate_series(1, 10000) AS g
UNION ALL
SELECT
  g,
  'baaaaaaaaaaaaaar' || g
FROM
  generate_series(1, 1000) AS g;

INSERT INTO spgist_text_tbl (id, t)
SELECT
  -g,
  'f' || repeat('o', 100 - g) || 'surprise'
FROM
  generate_series(1, 100) AS g;

CREATE INDEX "spgist_point_idx2"
ON spgist_point_tbl
USING spgist
(
  p
)
WITH (fillfactor = 9);

CREATE INDEX "spgist_point_idx2"
ON spgist_point_tbl
USING spgist
(
  p
)
WITH (fillfactor = 101);

ALTER INDEX spgist_point_idx
  SET (fillfactor = 90);

REINDEX INDEX spgist_point_idx;

CREATE DOMAIN spgist_text AS VARCHAR;

CREATE TABLE spgist_domain_tbl (f1 spgist_text);

CREATE INDEX "spgist_domain_idx"
ON spgist_domain_tbl
USING spgist
(
  f1
);

INSERT INTO spgist_domain_tbl
VALUES
  ('fee'),
  ('fi'),
  ('fo'),
  ('fum');

SELECT * FROM spgist_domain_tbl WHERE f1 = 'fo';

SELECT * FROM spgist_domain_tbl WHERE f1 = 'fo';

CREATE UNLOGGED TABLE spgist_unlogged_tbl (id serial, b box);

CREATE INDEX "spgist_unlogged_idx"
ON spgist_unlogged_tbl
USING spgist
(
  b
);

INSERT INTO spgist_unlogged_tbl (b)
SELECT
  box(point(i, j))
FROM
  generate_series(1, 100, 5) AS i,
  generate_series(1, 10, 5) AS j;
